--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <span>Scan to Check In</span>
                 <strong>Untappd Venue</strong>
               </div>
-              <img src="qr-funcleson.png" alt="QR code to Untappd Venue" />
+              <img src="Funcleson-Funkatorium-QR-Code.PNG" alt="QR code to Untappd Venue" />
             </div>
           </div>
 
